--- a/demo.html
+++ b/demo.html
@@ -1,13 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    body{
+      margin: 0 auto;
+      max-width: 900px;
+      width: 90%;
+    }
+    img{
+      float: right;
+      width: 500px;
+      margin-right: 20px;
+    }
+  </style>
+</head>
+<body>
+  
+  <h1>float property</h1>
+  <img src="home.png" alt="">
+  <h1>resume</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, veniam. Commodi distinctio quisquam earum laboriosam accusamus sequi aspernatur saepe, laborum culpa aliquid. Numquam beatae at sunt repudiandae distinctio et tempora quis dignissimos vitae fugit dolores totam, blanditiis natus nihil voluptatibus nemo excepturi repellat? Totam unde iusto blanditiis officia numquam nostrum?</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quod in facere quae sequi esse veritatis? Minima, ipsa harum? Doloribus distinctio illum optio omnis totam deleniti nesciunt earum ducimus quo doloremque libero asperiores, qui, molestias quia consequatur. Soluta nulla sunt quisquam excepturi sequi, quas tempora, alias asperiores sapiente amet fugit.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur at maxime illum excepturi modi nesciunt porro fugiat eos totam voluptas doloribus, repellat accusamus nobis odio velit architecto perspiciatis error sit magnam? Quae eveniet tenetur aut saepe obcaecati reiciendis sint est harum maxime, dicta reprehenderit dolorum in nesciunt! Magni, error.</p>
 
-<html> 
-
-   <head> 
-     <title>demo</title>
-   </head>
-
-   <body>
-     <h2>i am coder</h2>
-     <h1>jammu</h1>
-   </body>
-
+</body>
 </html>
