--- a/z.html
+++ b/z.html
@@ -85,7 +85,7 @@
 
        <!-- <p><b><u><i>hello</i></u> how are you</b></p> -->
 
-
+<!-- 
        <h1 style="background-color: aqua;">hello</h1>
        <h1 style="background-color: yellow;">world</h1>
         
@@ -104,8 +104,23 @@
 
 
         <span>delhi</span>
-        <span>mohali</span>
+        <span>mohali</span> -->
           <!-- block elemnet  inline element -->
         <!-- opening tag + closing tag + content = elemnet -->
+
+
+
+
+<label for="pet-select">Choose a pet:</label>
+
+<select name="pets" id="pet-select">
+  <option value="">--Please choose an option--</option>
+  <option value="dog">Dog</option>
+  <option value="cat">Cat</option>
+  <option value="hamster">Hamster</option>
+  <option value="parrot">Parrot</option>
+  <option value="spider">Spider</option>
+  <option value="goldfish">Goldfish</option>
+</select>
 </body>
 </html>
